--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name="com.babaenciel.gemi.anggaran.AnggaranPengeluaranActivity"></activity>
         <activity android:name="com.babaenciel.gemi.anggaran.AnggaranInsertFormActivity"></activity>
         <activity android:name="com.babaenciel.gemi.anggaran.AnggaranPengeluaranInsertFormActivity"></activity>
+        <activity android:name="com.babaenciel.gemi.tagihan.TagihanActivity"></activity>
     </application>
     
 
