--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name="com.babaenciel.gemi.tagihan.TagihanActivity"></activity>
         <activity android:name="com.babaenciel.gemi.tagihan.TagihanInsertActivity"></activity>
         <activity android:name="com.babaenciel.gemi.hutang.HutangActivity"></activity>
+        <activity android:name="com.babaenciel.gemi.tabungan.TabunganActivity"></activity>
         
         <receiver android:process=":remote" android:name="com.babaenciel.gemi.tagihan.TagihanBroadcastReceiver"></receiver>
     </application>
